[gd_scene load_steps=21 format=3 uid="uid://dq4puouq71bfo"]

[ext_resource type="Script" uid="uid://do8wo4pv335xw" path="res://GUI/player_hud/player_hud.gd" id="1_alx7a"]
[ext_resource type="PackedScene" uid="uid://bp67mumln4no1" path="res://GUI/player_hud/heart_gui.tscn" id="2_alx7a"]
[ext_resource type="Texture2D" uid="uid://bayurldv3m0v5" path="res://GUI/player_hud/life_hearts.ase" id="2_oghrr"]
[ext_resource type="FontFile" uid="uid://cr74hc551wapv" path="res://GUI/fonts/Abaddon Bold.ttf" id="4_4b3j6"]
[ext_resource type="Texture2D" uid="uid://dj2tff47aap14" path="res://GUI/player_hud/boss-hp.png" id="5_sysqg"]
[ext_resource type="FontFile" uid="uid://ccvatdmcvqh04" path="res://GUI/fonts/m5x7.ttf" id="5_yhjvm"]
[ext_resource type="Texture2D" uid="uid://dmskv5ae85ts2" path="res://GUI/player_hud/panel_notification.png" id="7_rxq5y"]
[ext_resource type="Script" uid="uid://cfk6xhdhghy1b" path="res://GUI/player_hud/notification.gd" id="7_scbx3"]
[ext_resource type="AudioStream" uid="uid://veohxunbujtr" path="res://GUI/player_hud/notification.wav" id="8_5bkpt"]

[sub_resource type="FontVariation" id="FontVariation_4b3j6"]
base_font = ExtResource("4_4b3j6")
spacing_glyph = 3

[sub_resource type="Animation" id="Animation_sysqg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(448, 232)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, 296)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4b3j6"]
resource_name = "fade_to_black"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(448, 232)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, 296)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yhjvm"]
resource_name = "show_game_over"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(447.99997, 248), Vector2(448, 232)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(456, 280), Vector2(456, 296)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxq5y"]
_data = {
&"RESET": SubResource("Animation_sysqg"),
&"fade_to_black": SubResource("Animation_4b3j6"),
&"show_game_over": SubResource("Animation_yhjvm")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_rxq5y"]
atlas = ExtResource("5_sysqg")
region = Rect2(9, 40, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bkpt"]
atlas = ExtResource("5_sysqg")
region = Rect2(40, 40, 15, 15)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5bkpt"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("7_rxq5y")
texture_margin_left = 18.0
texture_margin_top = 18.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Animation" id="Animation_rxq5y"]
resource_name = "show_notification"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-5, 0), Vector2(-5, 5), Vector2(-5, 5), Vector2(-5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_5bkpt")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_5bkpt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bkpt"]
_data = {
&"RESET": SubResource("Animation_5bkpt"),
&"show_notification": SubResource("Animation_rxq5y")
}

[node name="PlayerHud" type="CanvasLayer"]
layer = 2
script = ExtResource("1_alx7a")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(52, 20)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_oghrr")
region_enabled = true
region_rect = Rect2(48, 0, 48, 16)

[node name="HFlowContainer" type="HFlowContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 44.0
offset_right = 216.07843
offset_bottom = 78.0
scale = Vector2(1.8, 1.8)
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 2

[node name="Heart" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart2" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart3" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart4" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart5" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart6" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart7" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart8" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart9" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart10" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart11" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart12" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart13" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart14" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart15" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart16" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart17" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart18" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart19" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="Heart20" parent="Control/HFlowContainer" instance=ExtResource("2_alx7a")]
layout_mode = 2

[node name="GameOver" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Label" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -92.0
offset_right = -25.0
offset_bottom = -73.99988
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_override_fonts/font = SubResource("FontVariation_4b3j6")
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -28.0
offset_right = -6.1035156e-05
offset_bottom = 34.857147
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="btnContinue" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
text = "continue"

[node name="btnTitle" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
text = "back to title"

[node name="FadeToBlack" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
&"": SubResource("AnimationLibrary_rxq5y")
}

[node name="BossUI" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -136.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control/BossUI"]
layout_mode = 0
offset_left = 406.0
offset_top = 76.0
offset_right = 744.0
offset_bottom = 108.0
value = 50.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_rxq5y")
texture_progress = SubResource("AtlasTexture_5bkpt")

[node name="NinePatchRect" type="NinePatchRect" parent="Control/BossUI"]
layout_mode = 0
offset_left = 392.0
offset_top = 56.0
offset_right = 575.0
offset_bottom = 91.5
scale = Vector2(2, 2)
texture = ExtResource("5_sysqg")
region_rect = Rect2(0, 0, 64, 32)
patch_margin_left = 22
patch_margin_right = 25
axis_stretch_horizontal = 1

[node name="Label" type="Label" parent="Control/BossUI"]
custom_minimum_size = Vector2(168, 18)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 32.0
offset_bottom = 50.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("5_yhjvm")
text = "BOSS NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Notification" type="Control" parent="Control"]
process_mode = 3
layout_mode = 1
anchor_left = 0.5763889
anchor_right = 0.6111111
anchor_bottom = 0.061728396
script = ExtResource("7_scbx3")

[node name="PanelContainer" type="PanelContainer" parent="Control/Notification"]
layout_mode = 0
offset_left = -5.0
offset_top = 5.0
offset_right = 239.0
offset_bottom = 57.0
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxTexture_5bkpt")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Notification/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Notification/PanelContainer/VBoxContainer"]
modulate = Color(1, 0.85882354, 0.5529412, 1)
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_yhjvm")
text = "Notification Type"
autowrap_mode = 2

[node name="Label2" type="Label" parent="Control/Notification/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_yhjvm")
text = "Notification Message"
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Notification"]
libraries = {
&"": SubResource("AnimationLibrary_5bkpt")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
